--- a/frontend/src/styles/Auth.css
+++ b/frontend/src/styles/Auth.css
@@ -1,3 +1,6 @@
+@import "./tokens.css";
+@import "./typography.css";
+
 .register-container {
     display: flex;
     width: 1440px;
@@ -161,7 +164,7 @@
   display: flex;
   flex-direction: row;
   background-color: transparent;
-  color:var(--gray-600);
+  color: var(--gray-600);
   justify-content: center;
   align-items: center;
   gap: 12px;
