--- a/frontend/src/styles/driverdashboard.css
+++ b/frontend/src/styles/driverdashboard.css
@@ -35,6 +35,9 @@
     margin: 16px auto 0;
     border-radius: var(--space-12);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.05);
+    display: flex;
+    flex-direction: column;
+    
     /* remove top/left/transform */
 }
 
@@ -70,11 +73,20 @@
 /* ensure cards form a horizontal rail and don't shrink */
 .due-notification-card{
     width: 272px;
-    height: 85px;
-    background-color: var(--error-400-tp);
+    height: 150px;
     flex: 0 0 auto;
     border-radius: var(--space-8);
     scroll-snap-align: start;
+    background: #ffecec;
+    color: #892929;
+    padding: 12px;
+    border-radius: 12px;
+}
+
+.due-footer {
+  display: flex;
+  justify-content: space-between;  /* <--- pushes Renew to the far right */
+  align-items: center;
 }
 
 .streak-card{
@@ -83,6 +95,12 @@
     background-color: var(--color-accent);
     /* margin-top: 92px; */
     border-radius: 8px;
+    font: Montserrat;
+    font-weight: 600;
+    font-size: 12px;
+    color: #333333;
+    padding-left: 12px;
+    gap: 5px;
 }
 
 .weekly-streak-card{
@@ -91,7 +109,28 @@
     background-color: var(--brand-primary);
     box-shadow: 0px 2px 8px 0 rgba(0,0,0,0.05);
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+
+.weekly-title{
+    font: var(--font-family);
+    font-weight: 600;
+    font-size: 14px;
+    color: var(--text-color);
+    padding-left: 12px;
+    margin-bottom: 8px;
+}
+
+.week-dots {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+    padding: 0 12px;
+    gap: 2px;
+}
+
 .vehicle-details-section{
     display: flex;
     width: 100%;
@@ -110,8 +149,51 @@
     align-items: center;
     justify-content: center;
 }
+
+.safe-driving-card{
+    font: var(--font-family);
+    font-weight: 600;
+    font-size: 16px;
+    color: var(--brand-primary);
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+    padding-left: 10px;
+}
+
+.sd-title {
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0;
+  
+}
+
+.sd-subtitle {
+  font-size: 12px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.insurance-card{
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+    padding-left: 10px;
+    position: relative;
+}
+
+
 .roadworthiness-card{
     height: 295px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+    padding-left: 10px;
+    position: relative;
 }
 .cta-btn-container{
     display: flex;
@@ -127,3 +209,42 @@
     margin: var(--space-8);
     border-radius: var(--space-12);
 }
+
+.small-txt {
+    font: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    color: var(--text-color);
+    padding-left: 16px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.wallet-amount {
+  margin-top: 5px;
+  margin-bottom: 40px;
+  margin-left: 15px;
+}
+
+.wallet-id {
+  font: var(--font-family);
+  font-weight: 600;
+  font-size: 12px;
+  margin-bottom: 50px;
+  margin-left: 15px;
+  color: #8E8E93;
+}
+
+.connect-wallet-btn {
+  position: absolute;
+  top: 35px;
+  right: 20px;
+  background: #FFF3B0;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 6px;
+  cursor: pointer;
+  gap: 10px;
+}
+
